2004-08-09  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: catch "%p\/src\/" also, not just "%p/src/".

2004-08-08  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Rename parse_configureparams() to prepare_percent_c()
	and: no longer consider %c cacheable and re-protect % in %c.
	* Engine.pm: fixes for prepare_percent_c().

2004-08-08  Max Horn <max@quendi.de>

	* Engine.pm: Fix list command with regards to virtual packages.

2004-08-05  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Config.pm: correct the regex for parsing Trees in write_sources_list

2004-08-05  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: cleaner form of the existing code for detecting
	the cctools version that doesn't use `strip`  =)

2004-08-03  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: merge from cond_config_params: Activate
	conditionals in ConfigureParams.
	* Text/DelimMatch.pm: merge from cond_config_params: import
	Text::DelimMatch-1.06 from CPAN into Fink:: package namespace.

2004-08-01  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: eval_conditional: do not proceed if bad syntax

2004-07-29  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: more modularization, to allow inject.pl in 10.3 
	directory to call some modules; eliminate local/bootstrap; injected 
	packages now go into local/injected
	* Config.pm: new function write_sources_list which writes an 
	appropriate file $basepath/etc/apt/sources.list .  (Called 
	automatically by $config->save().); move the hook to old pre-10.2 
	debs from postinstall script to Config.pm; allow local modifications 
	at both the top and bottom of the sources.list file, and preserve 
	them when the file is re-generated
	* FinkVersion.pm.in: the VERSION file and the stamp-* files will 
	now live in /sw/fink/dists, not /sw/fink
	* SelfUpdate.pm: manipulate stamp-* files in new location; rsync must 
	include DISTRIBUTION and README files; change the VERSION when