@@ -1,5 +1,9 @@
 2004-08-09  Daniel Macks  <dmacks@netspace.org>
 
+	* PkgVersion.pm: disable caching for get_env if in bootstrapping mode.
+
+2004-08-09  Daniel Macks  <dmacks@netspace.org>
+
 	* Validation.pm: catch "%p\/src\/" also, not just "%p/src/".
 
 2004-08-08  Daniel Macks  <dmacks@netspace.org>
